--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/dist/output.css" rel="stylesheet">
-    <script src="src/index.js"></script>
     <title>People Counter App</title>
 </head>
 <body>
     <h1>People Counted:</h1>
     <h2 id="count-el">0</h2>
+    <button id="add-btn" onclick="increase()">Add</button>
+    <script src="/src/index.js"></script>
 </body>
 </html>
