added minus & save btn

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
     <h1>People Counted:</h1>
     <h2 id="count-el">0</h2>
     <button id="add-btn" onclick="increase()">Add</button>
+    <button id="minus-btn" onclick="decrease()">Minus</button>
+    <button id="save-btn" onclick="save()">Save</button>
     <script src="/src/index.js"></script>
 </body>
 </html>
