--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/output.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/dist/output.css" rel="stylesheet" />
     <title>People Counter App</title>
-</head>
-<body>
-    <h1>People Counted:</h1>
-    <h2 id="count-el">0</h2>
-    <button id="add-btn" onclick="increase()">Add</button>
-    <button id="minus-btn" onclick="decrease()">Minus</button>
-    <button id="save-btn" onclick="save()">Save</button>
+  </head>
+  <body>
+    <div>
+      <h1>People Counted:</h1>
+      <h2 id="count-el">0</h2>
+    </div>
+    <div>
+      <button id="add-btn" onclick="increase()">Add</button>
+      <button id="minus-btn" onclick="decrease()">Minus</button>
+      <button id="save-btn" onclick="save()">Save</button>
+    </div>
+    <div>
+      <p id="save-el">Saved Entries:</p>
+    </div>
     <script src="/src/index.js"></script>
-</body>
+  </body>
 </html>
