--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link href="/dist/output.css" rel="stylesheet">
     <title>People Counter App</title>
   </head>
-  <body>
-    <div>
-      <h1>People Counted:</h1>
+  <body class="" style="background-image: url('/img/transportaion.png')">
+    <div class="">
+      <h1 class="text-3xl font-bold underline">People Counted:</h1>
       <h2 id="count-el">0</h2>
     </div>
-    <div>
-      <button id="add-btn" onclick="increase()">Add</button>
-      <button id="minus-btn" onclick="decrease()">Minus</button>
-      <button id="save-btn" onclick="save()">Save</button>
+    <div class="">
+      <button class="" id="add-btn" onclick="increase()">Add</button>
+      <button class="" id="minus-btn" onclick="decrease()">Minus</button>
+      <button class="" id="save-btn" onclick="save()">Save</button>
     </div>
-    <div>
-      <p id="save-el">Saved Entries:</p>
+    <div class="">
+      <p class="" id="save-el">Saved Entries:</p>
     </div>
     <script src="/src/index.js"></script>
   </body>
