--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,52 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="/dist/output.css" rel="stylesheet" />
     <title>People Counter App</title>
   </head>
-  <body class="" style="background-image: url('/img/transportaion.png')">
-    <div class="">
-      <h1 class="text-3xl font-bold underline">People Counted:</h1>
-      <h2 id="count-el">0</h2>
+
+  <body
+    class="h-screen font-mono bg-gradient-to-b from-cyan-500 to-blue-600"
+  >
+    <div class="flex flex-col items-center gap-3 py-6">
+      <h1 class="text-4xl font-black uppercase">People Counted:</h1>
+      <h2 class="text-6xl" id="count-el">0</h2>
     </div>
-    <div class="">
-      <button class="" id="add-btn" onclick="increase()">Add</button>
-      <button class="" id="minus-btn" onclick="decrease()">Minus</button>
-      <button class="" id="save-btn" onclick="save()">Save</button>
+    <div class="flex justify-evenly gap-5 mx-2 py-6">
+      <button
+        class="col-start-1 text-white bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 font-semibold rounded-lg text-2xl px-10 py-4 text-center"
+        id="add-btn"
+        onclick="increase()"
+      >
+        Add
+      </button>
+      <button
+        class="col-start-2 text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-semibold rounded-lg text-2xl px-7 py-4 text-center"
+        id="minus-btn"
+        onclick="decrease()"
+      >
+        Minus
+      </button>
     </div>
-    <div class="">
-      <p class="" id="save-el">Saved Entries:</p>
+    <div class="flex justify-center mx-2 py-10">
+      <button
+        class="text-white bg-gradient-to-r from-purple-500 via-purple-600 to-purple-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-purple-300 dark:focus:ring-purple-800 font-semibold rounded-lg text-2xl px-10 py-4 text-center"
+        id="save-btn"
+        onclick="save()"
+      >
+        Save
+      </button>
+    </div>
+    <div class="flex flex-col items-center gap-2 pb-10">
+      <p class="text-xl">Saved Entries:</p>
+      <p class="text-xl" id="save-el"></p>
+      <button
+        class="text-white bg-gradient-to-r from-gray-400 via-gray-500 to-gray-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-gray-300 dark:focus:ring-gray-800 font-semibold rounded-lg text-xl px-5 py-1 text-center"
+        id="reset-btn"
+        onclick="reset()"
+      >
+        Reset
+      </button>
     </div>
     <script src="/src/index.js"></script>
   </body>
