--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
         Reset
       </button>
     </div>
-    <script src="/src/index.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
