--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="/dist/output.css" rel="stylesheet" />
+    <link href="input.css" rel="stylesheet" />
     <title>People Counter App</title>
   </head>
 
@@ -51,6 +52,6 @@
         Reset
       </button>
     </div>
-    <script src="/index.js"></script>
+    <script src="/index.js" type="text/javascript"></script>
   </body>
 </html>
