--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         Save
       </button>
     </div>
-    <div class="flex flex-col items-center gap-2 pb-10">
+    <div class="flex flex-col items-center gap-2 mx-5 pb-10">
       <p class="text-xl">Saved Entries:</p>
       <p class="text-xl" id="save-el"></p>
       <button
